feat: initialize frontend project with React, Vite, and Bootstrap
- Added package.json with dependencies and scripts for development and build.
- Included Vite logo SVG in public directory.
- Created main CSS file and imported Bootstrap styles.
- Developed main App component with routing and category fetching.
- Added Home page to display top artisans with loading and error handling.
- Implemented ArtisanCard component to display artisan details and ratings.
- Created Header and Footer components for navigation and legal links.
- Styled components with SCSS for better design and responsiveness.
- Set up API service for fetching categories and artisans.
- Configured Vite for React application.

--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,4 @@ DB_NAME=trouve_ton_artisan
 
 PORT=3000
 NODE_ENV=development
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://redesigned-engine-wr5q77x6rpqwc9p9-5173.app.github.dev
