test connexion front et backend ajustement css sur front end verification des pages

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-# URL de l'API
-VITE_API_URL=https://redesigned-engine-wr5q77x6rpqwc9p9-3000.app.github.dev/
+# API locale
+VITE_API_URL=http://localhost:3000/api
