chore: initialize package-lock.json for dependency management

--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,4 @@ DB_NAME=trouve_ton_artisan
 
 PORT=3000
 NODE_ENV=development
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://fluffy-space-umbrella-q745qq6r7rp7h954j-5173.app.github.dev/
