--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,1 @@
-# API locale
-VITE_API_URL=http://localhost:3000/api
+VITE_API_URL=https://fluffy-space-umbrella-q745qq6r7rp7h954j-3000.app.github.dev/api
